test/functions/bradc/intUint3.good
intUint3.chpl:11: error: unresolved call 'foo(1, 2)'
intUint3.chpl:1: note: candidates are: foo(x: int, y: uint)
intUint3.chpl:5: note:                 foo(x: uint, y: int)
